--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="carta">Carta</string>
     <string name="ubicacio">On trobar-nos</string>
     <string name="title_activity_dash_board_principal">DashBoardPrincipalActivity</string>
+    <string name="title_activity_condicions">CondicionsActivity</string>
+    <string name="acepta_condicions">Aquesta Activitat mostrarà les condicions que visulitzarem des de una pàgina web </string>
 
 </resources>
