afegint noves funcions

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Entrar">Entrar</string>
     <string name="Cancelar">Cancel·lar</string>
     <string name="registrat">Registrat</string>
+    <string name="descripcio_logo">Imatge corporativa</string>
     <string name="nom">Nom</string>
     <string name="cognom">Cognom</string>
     <string name="nickname">Nom Usuari</string>
