--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">PTFinalMP7</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="Entrar">Entrar</string>
+    <string name="Entrar">Inicia Sessió</string>
     <string name="Cancelar">Cancel·lar</string>
     <string name="registrat">Registrat</string>
     <string name="descripcio_logo">Imatge corporativa</string>
